ecmascript/parser/tests/typescript-errors/type-arguments/input.ts.stderr
error: Expected an expression after this
 --> $DIR/tests/typescript-errors/type-arguments/input.ts:1:8
  |
1 | new A<T>;
  |        ^

